--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -12,7 +12,7 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Real-Time Scheduling and Analysis of Processing Chains on Multi-threaded エグゼキュータ in ROS 2}
+\title{Real-Time Scheduling and Analysis of Processing Chains on Multi-threaded Executor in ROS 2}
 \subtitle{2022 RTSS}
 \author{矢野 篤志}
 \date{\today}
@@ -33,12 +33,13 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
+\input{prior_knowledge.tex}
 % \input{introduction.tex}
-% \input{background.tex}
-% \input{system_model.tex}
-\input{symbols_terms.tex}
-\input{responce_time_analysis.tex}
-\input{the_second_bound.tex}
+\input{background.tex}
+\input{system_model.tex}
+% \input{symbols_terms.tex}
+% \input{responce_time_analysis.tex}
+% \input{the_second_bound.tex}
 % \input{experiments.tex}
 % \input{related_work.tex}
 % \input{conclusion_future_work.tex}
