--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/prior_knowledge.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/prior_knowledge.tex
@@ -2,3 +2,16 @@
 
 \section{Prior Knowledge}
 \label{sec: prior knowledge}
+
+\begin{frame}{前提知識1}
+    \begin{itemize}
+        \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071/ROS+Robot+Operating+System}
+        \item \ourl{ROS2}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683635767/ROS+2+Robot+Operation+System+2}
+        \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
+        \item \ourl{エグゼキュータ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683373911/Executer}
+        \item \ourl{Publish/Subscribeモデル}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2675048610/Publish+Subscribe}
+        \item \ourl{DDS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603207/DDS+Data+Distribution+Service}
+        \item \ourl{コールバック関数}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231/Callback}
+        \item \ourl{コールバックグループ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683374043/Callback}
+    \end{itemize}
+\end{frame}
