--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/abstract.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/abstract.tex
@@ -1,5 +1,12 @@
 % !TeX root = main.tex
 
 \begin{frame}{提案の概要}
-    \item フェデレート スケジューリングは, 各タスクが一連の専用プロセッサで排他的に実行される並列リアルタイム タスクをスケジュールするための有望なアプローチである．ただし, タスクは通常, 割り当てられた処理能力の一部しか使用せず, 未使用の部分は他のタスクと共有できないため, フェデレート スケジューリングではリソースが大幅に浪費される．この問題を解決するために, フェデレート スケジューリングの優れた分析可能性を享受し, タスクがプロセッサを他のタスクと効率的に共有できるようにする仮想フェデレート スケジューリング アプローチを提示する．主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, タスクを一連の仮想プロセッサ上で排他的に実行することである．物理プロセッサは仮想プロセッサによって共有されるため, タスクは互いにプロセッサを効果的に共有する．一方, 各タスクは独自の仮想プロセッサ セットで排他的に実行されるため, フェデレート スケジューリングの優れた分析可能性を仮想フェデレート スケジューリング アプローチに取り入れることができる．総合的な性能評価を行い, 提案したアプローチをさまざまなタイプの既存の方法と比較する．実験結果は, 幅広いパラメーター設定の下で, 私たちのアプローチが一貫して既存の方法よりもかなり優れていることを示している．
+    \item フェデレートスケジューリングは, 各タスクが一連の専用プロセッサで排他的に実行される並列リアルタイムタスクをスケジュールするための有望なアプローチである
+    \item しかし, タスクは通常, 割り当てられた処理能力の一部しか使用せず, 未使用の部分は他のタスクと共有できないため, フェデレートスケジューリングではリソースが大幅に浪費される
+    \item この問題を解決するために, フェデレートスケジューリングの優れた分析可能性を享受し, タスクがプロセッサを他のタスクと効率的に共有できるようにする仮想フェデレートスケジューリングアプローチを提示する
+    \item 主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, タスクを一連の仮想プロセッサ上で排他的に実行することである
+    \item 物理プロセッサは仮想プロセッサによって共有されるため, タスクは互いにプロセッサを効果的に共有する
+    \item 一方, 各タスクは独自の仮想プロセッサセットで排他的に実行されるため, フェデレートスケジューリングの優れた分析可能性を仮想フェデレートスケジューリングアプローチに取り入れることができる
+    \item 総合的な性能評価を行い, 提案したアプローチをさまざまなタイプの既存の方法と比較する
+    \item 実験結果は, 幅広いパラメーター設定の下で, 本論文のアプローチが一貫して既存の方法よりもかなり優れていることを示している
 \end{frame}
